--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -22,3 +22,8 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+ext {
+   # Upgrade snakeyaml lib due to vulnerability
+   set('snakeyaml.version','2.0')
+}
