--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.6'
+	id 'org.springframework.boot' version '3.1.0-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'io.freefair.lombok' version '8.0.1'
 }
 
 group = 'com.polarbookshop'
@@ -10,11 +11,25 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
+ 	maven { url 'https://repo.spring.io/snapshot' }
+}
+
+configurations {
+  compileOnly {
+    extendsFrom annotationProcessor
+  }
 }
 
 dependencies {
+	compileOnly 'org.projectlombok:lombok'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	annotationProcessor 'org.projectlombok:lombok'
+	
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
@@ -26,4 +41,8 @@ tasks.named('test') {
 ext {
    // Upgrade snakeyaml lib due to vulnerability
    set('snakeyaml.version','2.0')
+}
+
+bootRun {
+	systemProperty 'spring.profiles.active', 'testdata'
 }
