--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ repositories {
  	maven { url 'https://repo.spring.io/snapshot' }
 }
 
+ext {
+   // Upgrade snakeyaml lib due to vulnerability
+   set('snakeyaml.version','2.0')
+   set('springCloudVersion', "2022.0.2")
+}
+
 configurations {
   compileOnly {
     extendsFrom annotationProcessor
@@ -29,19 +35,24 @@ dependencies {
 	
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
+}
+
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
 
-ext {
-   // Upgrade snakeyaml lib due to vulnerability
-   set('snakeyaml.version','2.0')
-}
+
 
 bootRun {
 	systemProperty 'spring.profiles.active', 'testdata'
