--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,26 @@ spring:
    cloud:
       config:
          uri: http://localhost:8888
+         request-connect-timeout: 1000
+         request-read-timeout: 2000
+         fail-fast: false
+         # Retry is only enabled if fail-fast is true
+         retry:
+            max-attempts: 3
+            initial-interval: 1000
+            max-interval: 2000
+            multiplier: 1.1
+   datasource:
+      username: postgres
+      password: password
+      url: jdbc:postgresql://localhost:5432/polardb_catalog
+      hikari:
+         connection-timeout: 2000
+         maximum-pool-size: 5
+   sql:
+      init:
+         mode: always
+         
 
 server:
   port: 9001
@@ -15,6 +35,12 @@ server:
     threads:
       max: 50
       min-spare: 5
+
+management:
+   endpoints:
+      web:
+         exposure:
+            include: refresh
       
 polar:
     greeting:  Welcome to the local book catalog [:%s]!
