--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ ext {
    // Upgrade snakeyaml lib due to vulnerability
    set('snakeyaml.version','2.0')
    set('springCloudVersion', "2022.0.2")
+   set('testcontainersVersion', "1.18.1")
 }
 
 configurations {
@@ -45,12 +46,14 @@ dependencies {
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
+	testImplementation 'org.testcontainers:postgresql'
 }
 
 
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
 	}
 }
 
