--- a/build.gradle
+++ b/build.gradle
@@ -62,8 +62,20 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-
-
 bootRun {
 	systemProperty 'spring.profiles.active', 'testdata'
 }
+
+bootBuildImage {
+	imageName = "${project.name}"
+	environment = ["BP_JVM_VERSION" : "17.*"]
+	
+	docker {
+		publishRegistry {
+			username = project.findProperty("registryUsername")
+			password = project.findProperty("registryToken")
+			url = project.findProperty("registryUrl")
+		}
+	}
+}
+
